crates/treebank-bash/grammar.js
  word: $ => $.word,

    program: $ => optional(choice($._statements, repeat1('\n'))),

    // Newlines are terminators here, not whitespace, so every blank line
    // and every block that opens on its own line has to be tolerated
    // explicitly. Without the `repeat('\n')` a function body written over
    // more than one line does not parse, which is most of them.
    _statements: $ => prec.right(seq(
      repeat('\n'),
      repeat(seq($._statement, $._terminator, repeat('\n'))),
      $._statement,
      optional($._terminator),
      repeat('\n'),
    )),

    // `;;` is NOT here. It terminates a case ITEM, not a statement, and
    // listing it meant `optional($._statements)` inside a case_item ate the
    // item's own terminator: a whole multi-item `case` collapsed into one
    // case_item, and the realistic multi-line form did not parse at all.
    // No corpus file ever produced a clean case_statement.
    _terminator: $ => choice(';', '\n', '&'),

    // ── statements ───────────────────────────────────────────────────
    _statement: $ => choice(
      $._control_flow,
      $._invocation,
      $._assignment,
      $.variable_assignments,
      // A bare redirection is a command with no name: `> "$FILE"`
      // truncates, `< f` tests readability. The node is still a command.
      alias($._redirect_statement, $.command),
      $.list,
      $.pipeline,
      $.subshell,
      $.compound_statement,
      $.function_definition,
      $.negated_command,
      $._directive,
      $.arithmetic_command,
      $.test_command,
    ),

    // `set -e` and friends are not directives; a shebang is.
    pipeline: $ => prec.left(PREC.pipeline, seq(
      field('left', $._statement),
      field('operator', choice('|', '|&')),
      repeat('\n'),
      field('right', $._statement),
    )),

    compound_statement: $ => prec.left(seq('{', $._statements, '}', repeat($.redirect))),

    _body: $ => choice($.do_group, $.compound_statement, $.subshell),

    do_group: $ => seq('do', optional($._statements), 'done'),

    // ── control flow ─────────────────────────────────────────────────
    if_statement: $ => prec.left(seq(
      'if',
      field('condition', $._statements),
      'then',
      field('consequence', optional($._statements)),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
      'fi',
      repeat($.redirect),
    )),

    else_clause: $ => seq('else', optional($._statements)),

    for_statement: $ => prec.left(seq(
      choice('for', 'select'),
      field('variable', alias($.word, $.variable_name)),
      optional(seq('in', field('value', repeat1($._word_like)))),
      // `for x in $(...);\n do` -- a `;` terminator may still be followed
      // by newlines before the body opens.
      $._terminator,
      repeat('\n'),
      field('body', $._body),
      repeat($.redirect),
    )),

    function_definition: $ => choice(
      seq('function', field('name', $.word), optional(seq('(', ')')), repeat('\n'), field('body', $._body)),
      seq(field('name', $.word), '(', ')', repeat('\n'), field('body', $._body)),
    ),

    // ── commands ─────────────────────────────────────────────────────
    command: $ => prec.left(seq(
      repeat(choice($.variable_assignment, $.redirect)),
      field('name', $._word_like),
      repeat(field('argument', $._argument)),
    )),

    // `!` and `{}` are ordinary ARGUMENTS here -- `find . ! -iname x`,
    // `-exec rm {} \;` -- even though both are operator spellings at a
    // statement's head. Position is the whole difference, so they are
    // spelled at the argument position and aliased to word.
    // Loses every tie on purpose: wherever a redirect can attach to a
    // real command or compound, it belongs there, and only a redirect
    // with nothing to serve is a statement of its own.
    _argument: $ => choice(
      $._word_like,
      $.redirect,
      alias('!', $.word),
      alias(token('{}'), $.word),
    ),

    variable_assignment: $ => seq(
      field('name', alias($._assignment_name, $.variable_name)),
      // `a[0]=1`: the scanner fences the NAME and peeks through the
      // brackets to find the `=`; the index itself is parsed here, with
      // the same restricted word the subscript rule uses.
      optional(seq('[', field('index', repeat1(choice($._expression, alias($._index_word, $.word)))), ']')),
      choice('=', '+='),
      field('value', optional(choice($._word_like, $.array))),
    ),

    // `local`, `declare`, `export` and friends take assignments as well as
    // words, which no ordinary command does.
    redirect: $ => prec.left(PREC.redirect, choice(
      seq(
        optional(field('descriptor', alias($._file_descriptor, $.file_descriptor))),
        field('operator', choice('<', '>', '>>', '&>', '&>>', '<&', '>&', '>|', '<>')),
        field('destination', $._word_like),
      ),
      $.heredoc_redirect,
      // The herestring: `<<< word` feeds the word as stdin.
      seq(field('operator', '<<<'), field('destination', $._word_like)),
    )),

    heredoc_redirect: $ => seq(
      optional(field('descriptor', alias($._file_descriptor, $.file_descriptor))),
      // Two start tokens for two operators: the scanner cannot see which
      // `<<` form the internal lexer consumed, but the VALID-TOKEN set at
      // the next position can carry it -- after `<<-` only the dash
      // variant is valid, and that is what sets tab-stripping for the
      // terminator. The `allows_indent` flag existed from the first
      // version of this scanner and was never assigned: `<<-` heredocs
      // only ever closed when their terminator happened to be unindented.
      choice(
        seq('<<', $.heredoc_start),
        seq('<<-', alias($._heredoc_start_dash, $.heredoc_start)),
      ),
      optional($.heredoc_body),
      optional($.heredoc_end),
    ),


    // ── tests and arithmetic ─────────────────────────────────────────
    test_command: $ => prec.left(choice(
      seq('[[', $._conditional, ']]', repeat($.redirect)),
      // `[` is a command and its arguments are words -- but `!=`, `=` and
      // `!` are operator characters the word token excludes, so they have
      // to be spelled: `[ "$a" != "$b" ]` errored on the `!=`.
      seq('[', repeat(choice($._word_like, '!', '!=', '==', '=', '-a', '-o', '(', ')')), ']', repeat($.redirect)),
    )),

    _conditional: $ => repeat1(choice(
      $._word_like,
      // The right side of `=~` is a REGEX, lexed by bash in its own mode:
      // `^(pip|easy)[23]$` is one operand even though parens and pipes are
      // operators everywhere else. One token, bracket-groups kept whole so
      // a `]` inside a class does not end the conditional.
      seq('=~', optional(alias(token(prec(1, /([^\s\[\]]|\[([^\]\[]|\[:[^\]]*:\])*\])+/)), $.regex))),
      '!', seq('&&', repeat('\n')), seq('||', repeat('\n')),
      '==', '!=', '<', '>', '-a', '-o', '(', ')',
    )),

    _word_like: $ => choice(
      $.word,
      $._expression,
      $.concatenation,
      $.brace_expression,
    ),

    word: _ => token(prec(0, seq(
      choice(
        /[^\s'"<>{}()$`|&;!\\\[\]#]/,
        /\\[^\r\n]/,
        // A bracket glob is one chunk, and `!` is legal INSIDE it --
        // `[!0-9]` negates the class -- while staying an operator outside.
        /\[[^\]\s]*\]/,
        /\[/,
        /\]/,
      ),
      repeat(choice(
        // `!` continues a word -- `-x!y` is one argument -- though it
        // stays an operator where a word STARTS.
        /[^\s'"<>{}()$`|&;\\\[\]]/,
        /\\[^\r\n]/,
        /\[[^\]\s]*\]/,
        /\[/,
        /\]/,
      )),
    ))),

    // Only inside an expansion, where nothing else can be there. At a
    // command's head this token must not exist: `echo` matches it as
    // readily as it matches `word`, the lexer has to choose, and choosing
    // this one loses the command reading permanently.
    variable_name: _ => token(prec(1, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // `{a,b}` and `{1..5}`: one token, requiring the comma or the range,
    // so a braceless `{x}` stays the plain word bash treats it as. Nested
    // expansions are beyond a single token and stay a recorded gap.
    number: _ => token(prec(1, /[0-9]+/)),

    // Double quotes: expansions happen inside, so the parts are real nodes.
    string: $ => seq(
      '"',
      repeat(choice(
        $._expansion_like,
        $.escape_sequence,
        // A backslash-newline continues the line inside a double-quoted
        // string just as it does outside one.
        token.immediate(/\\\r?\n/),
        token.immediate(prec(1, /[^"$`\\]+/)),
        // A `$` followed by anything that cannot start an expansion is a
        // literal dollar sign: `"$"`, `"v$/x"`. One character of lookahead
        // decides it, which is scanner work -- as a grammar token the
        // lexer had to guess between this and the expansion opener before
        // seeing what followed, and guessed one way or the other for the
        // whole corpus.
        alias($._dollar_literal, '$'),
      )),
      '"',
    ),

    // Single quotes: nothing expands, so there is nothing to look inside.
    _expression: $ => choice(
      $._literal,
      $._access,
      $.command_substitution,
      $.arithmetic_expansion,
      $.process_substitution,
    ),

    _expansion_like: $ => choice(
      $._access,
      $.command_substitution,
      $.arithmetic_expansion,
    ),

    // `$x`, `$1`, `$@`
    simple_expansion: $ => seq(
      '$',
      field('name', choice(
        $.variable_name,
        $.special_variable,
      )),
    ),

    // prec 2: `number` sits at prec 1 (its contest with `word`), and
    // inside `${1#x}` the positional must win the digit or the expansion
    // reads `${ number` and dies.
    _index_word: _ => token(prec(1, repeat1(choice(
      /[^\s'"<>{}()$`|&;!\\\[\]]/,
      /\\[^\r\n]/,
    )))),
